--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.lightstreamer.simple_demo.android"
         minSdkVersion 10
         targetSdkVersion 22
-        versionCode 10
-        versionName "2.0"
+        versionCode 11
+        versionName "2.0.1"
     }
     /*signingConfigs {
         release {
@@ -37,5 +37,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.androidplot:androidplot-core:0.6.1'
-    compile 'com.lightstreamer:ls-android-client-compact:2.0.0-a1'
+    compile 'com.lightstreamer:ls-android-client-compact:2.0.2'
 }
