Update to build with the latest LS library (non-compact version)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.lightstreamer.simple_demo.android"
         minSdkVersion 10
         targetSdkVersion 22
-        versionCode 11
-        versionName "2.0.1"
+        versionCode 12
+        versionName "2.1.0"
     }
     /*signingConfigs {
         release {
@@ -29,7 +29,9 @@ android {
     packagingOptions {
         pickFirst 'build.number'
         pickFirst 'version.number'
-        pickFirst 'compatibility_version.number'        
+        pickFirst 'compatibility_version.number'
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/io.netty.versions.properties'
     }
 }
 
@@ -37,5 +39,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.androidplot:androidplot-core:0.6.1'
-    compile 'com.lightstreamer:ls-android-client-compact:2.0.2'
+    compile 'com.lightstreamer:ls-android-client:3.0.0'
 }
