--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.lightstreamer.simple_demo.android"
         minSdkVersion 10
         targetSdkVersion 22
-        versionCode 12
+        versionCode 13
         versionName "2.1.0"
     }
     /*signingConfigs {
@@ -39,5 +39,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.androidplot:androidplot-core:0.6.1'
-    compile 'com.lightstreamer:ls-android-client:3.0.0'
+    compile 'com.lightstreamer:ls-log-adapter-java:1.0.1'
+    compile 'com.lightstreamer:java-system-out-log:1.0.2'
+    compile 'com.lightstreamer:ls-android-client:4.0.0'
 }
