--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.androidplot:androidplot-core:0.6.1'
-    compile 'com.lightstreamer:ls-log-adapter-java:1.0.2'
-    compile 'com.lightstreamer:java-system-out-log:1.0.2'
-    compile 'com.lightstreamer:ls-android-client:4.2.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:23.2.1'
+    implementation 'com.androidplot:androidplot-core:1.0.0'
+    implementation 'com.lightstreamer:ls-log-adapter-java:1.0.2'
+    implementation 'com.lightstreamer:java-system-out-log:1.0.2'
+    implementation 'com.lightstreamer:ls-android-client:4.2.2'
 }
