--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:23.2.1'
     implementation 'com.androidplot:androidplot-core:1.0.0'
-    implementation 'com.lightstreamer:ls-log-adapter-java:1.0.2'
-    implementation 'com.lightstreamer:java-system-out-log:1.0.2'
-    implementation 'com.lightstreamer:ls-android-client:4.2.2'
+    implementation 'com.lightstreamer:ls-android-client:5.0.0-beta.1'
 }
